Fix pageload cookiebanner flicker

--- a/css/style.scss
+++ b/css/style.scss
@@ -340,7 +340,7 @@ a.grid-item {
   letter-spacing: 0;
 }
 .cookiepopup{
-  display: block; 
+  display: none; 
   border: 1px solid;
 }
 .acceptbtn{
@@ -363,3 +363,4 @@ a.grid-item {
   color: #00c8ff;
   text-decoration: underline;
   }
+
